# python-project-83

./: .gitignore  Makefile  README.md  build.sh  build_dev.sh  build_deva.sh  database.sql  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml
page_analyzer/: __init__.py  app.py  repository.py  supportive_functions.py  validator.py
page_analyzer/templates/: index.html  layout.html  not_found.html  show.html  urls.html
tests/: test_page_analyzer.py
