[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "pook>=2.1.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

